# RL_atari_test

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_comparison.py
atari_rl/agents/: __init__.py  dqn_agent.py  nec_agent.py
atari_rl/config/: settings.py
atari_rl/memory/: __init__.py  dnd.py
atari_rl/models/: __init__.py  double_dqn.py  dqn.py  dueling_dqn.py  nec.py
atari_rl/trainer/: __init__.py  trainer.py
atari_rl/utils/: __init__.py  atari_wrapper.py  replay_buffer.py
